fix: user higher z-index for button; remove variables for hovered / pressed box-shadow

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -163,19 +163,19 @@ $button-text: $base-text !default;
 $button-bg: $base-bg !default;
 $button-border: darken( $base-border, 8 ) !default;
 $button-gradient: none !default;
-$button-shadow: $btn-box-shadow !default;
+$button-shadow: none !default;
 
 $button-hovered-text: $button-text !default;
 $button-hovered-bg: darken( $button-bg, 10% ) !default;
 $button-hovered-border: darken( $button-border, 12% ) !default;
 $button-hovered-gradient: none !default;
-$button-hovered-shadow: $btn-box-shadow !default;
+$button-hovered-shadow: none !default;
 
 $button-pressed-text: $button-hovered-text !default;
 $button-pressed-bg: $button-hovered-bg !default;
 $button-pressed-border: $button-hovered-border !default;
 $button-pressed-gradient: none !default;
-$button-pressed-shadow: $btn-active-box-shadow !default;
+$button-pressed-shadow: none !default;
 
 $button-focused-shadow: 0 0 0 2px rgba($button-border, .5) !default;
 
